force-app/main/default/objects/ActivityLog__c/ActivityLog__c.object-meta.xml
<CustomObject>
    <label>Canvas Sync Activity Log</label>
    <nameField>
        <displayFormat>CNV-LOG-{0000}</displayFormat>
        <label>Canvas Sync Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canvas Sync Activity Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>