force-app/main/default/objects/ActivityLog__c/fields/CanvasUser__c.field-meta.xml
<CustomField>
    <fullName>CanvasUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canvas User</label>
    <referenceTo>CanvasUser__c</referenceTo>
    <relationshipName>Canvas_Sync_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>